# traildb-cpp

./: .gitignore  BUILD  CMakeLists.txt  PACKAGE.cmake
include/: ByteManipulations.h  TrailDBConstructor.h  TrailDBException.h  TrailDBcpp.h
tests/: test.cpp
